package com.twilio.verify.api

import com.twilio.verify.domain.factor.models.FactorBuilder
import org.json.JSONObject

/*
 * Copyright (c) 2020, Twilio Inc.
 */

class FactorAPIClient {
  internal fun create(factorBuilder: FactorBuilder): JSONObject {
    return JSONObject()
  }
}