/*
 * Copyright (c) 2019, Twilio Inc.
 */
package com.twilio.verify.models

enum class FactorType {
  Push
}